# holdup

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
output/: summary_2026-02-09.md
src/holdup/: __init__.py  catalog.py  cli.py  config.py  staging.py
src/holdup/consumers/: __init__.py  base.py  summary.py
src/holdup/crawlers/: __init__.py  alpaca.py  base.py
